Bug 376664 - Bridged connections are not visible in the applet
Summary: Bridged connections are not visible in the applet
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
: 376785 382024 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-02-19 10:55 UTC by revan
Modified: 2024-12-23 18:26 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bring back functionality (7.85 KB, patch)
2017-07-25 01:10 UTC, Jack Prom
Details

Note You need to log in before you can comment on or make changes to this bug.
Description revan 2017-02-19 10:55:48 UTC
I had some bridged connection made for my virtual machines with the network manager before the upgrade to Plasma 5.9 and now I can not see any connection. Because the adapter was bridged the applet is completely empty! I can't even change my IP address.

I have found this commit: https://cgit.kde.org/plasma-nm.git/commit/?id=aae4b7886bcf865d976e98910e24b13436521f8f which says: "[bridged connections] are not used on desktop anyway". This is not true! Anybody who has virtual-box, vmware workstation or virt manger installed uses this. Please add the options back. I had to install the Gnome Network manager to be able to edit my connections. Please revert this decision, this is a regression.
Comment 1 Jan Grulich 2017-02-19 17:04:04 UTC
As I already told you on GitHub, I don't plan to revert this as I believe this shouldn't be visible to regular users. If you want to edit your bridge connections, then you can use nm-connection-editor (which is the Gnome NM tool you mentioned I guess) or use nmcli or nmtui. Even Gnome as a such doesn't show and support that, they had that some time ago, but dropped support for these connection types recently as well.

[1] - https://git.gnome.org/browse/gnome-control-center/commit/?id=20b634b4544d1cfa62cf37932b20396198fd84d9
[2] - https://git.gnome.org/browse/gnome-control-center/commit/?id=b38bf8b67207b55df9d9c1f9433699c5b0395c89
[3] - https://git.gnome.org/browse/gnome-control-center/commit/?id=99743428656618b64e5115e2216339676c0e7510
[4] - https://git.gnome.org/browse/gnome-control-center/commit/?id=a4729411b564ae1e69522101984818a11ca94efe
[5] - https://git.gnome.org/browse/gnome-control-center/commit/?id=8861d4409921235c76b8792db42cd6f42d903a7a
Comment 2 Jan Grulich 2017-02-22 06:18:30 UTC
*** Bug 376785 has been marked as a duplicate of this bug. ***
Comment 3 imraro 2017-02-22 06:28:30 UTC
Even you don't want support ability to create this type of connections, why not leave the opportunity to connect through an applet to already created connections?
Comment 4 Jan Grulich 2017-02-22 06:53:45 UTC
If you want more info why we decided to go this way check:
https://mail.kde.org/pipermail/kde-hardware-devel/2015-December/003573.html
Comment 5 imraro 2017-02-22 07:12:30 UTC
I've read. Is sad, when the familiar functionality worked for several years is lost and you need to rebuild the workflow. Can you point to the commit for applet, because i want to revert it for my build?
Comment 7 Meconio 2017-07-05 18:53:56 UTC
We are agree with imraro and revan.

Before in plasma vlan support worked perfectly until someone has decided to remove it. 
https://cgit.kde.org/plasma-nm.git/commit/?id=aae4b7886bcf865d976e98910e24b13436521f8f&h=Plasma%2F5.10

Me and my company think that's not the right thing. We've installed kde distributions because we work with networks and plasma has fast support in creating network profiles and vlan. Even windows has graphical support for vlan and its is a desktop use! But vlan creation is not as fast as it was in plasma. I do not understand why to remove a very convenient function that has always worked. Please reapply it.

Thanks for attention.
Comment 8 Smallker 2017-07-05 19:18:05 UTC
*** This bug has been confirmed by popular vote. ***
Comment 9 rakart89 2017-07-06 12:35:06 UTC
I agree with the all the others. After I decided to update to Neon version of KDE I felt completely surprised about this decision. I think is a very usefull feature and I also think there is no apparently reason for removing it. Despite the same result could be accomplished using other tools, it could even be both time-consuming and counter-intuitive. I also think it should be up to the user deciding whether this function could be visible or not, setting permissions as usual. Considering that I ask to re-introduce this feature as soon as possible.
Comment 10 faunris 2017-07-07 10:30:42 UTC
I fully agree with the message above
Comment 11 Jan Grulich 2017-07-10 12:24:32 UTC
*** Bug 382024 has been marked as a duplicate of this bug. ***
Comment 12 Richard Hering 2017-07-18 02:22:23 UTC
"they are not used on desktop anyway." sorry, this is bullshit! It's also bullshit to remove working functionality
Comment 13 vetash89 2017-07-19 05:54:02 UTC
Make KDE NM great again.
Comment 14 Stefan Schmid 2017-07-19 15:01:03 UTC
To force the people to a NetworkManager but then only pass the half of the functionality is just bad design. If you do not want to have a VLAN, Bridges or whatever, then the NetworkManager is not the right choice.
Comment 15 buzzurro 2017-07-21 14:30:58 UTC
It is frustrating to see again "WONTFIX".
In our office, for example, the primary connection is delivered by vlan.
For us it is not a choice.

in this case a major feature are broken.
Comment 16 Jack Prom 2017-07-25 01:10:44 UTC
Created attachment 106846 [details]
bring back functionality
Comment 17 Jack Prom 2017-07-25 01:10:58 UTC
ok, have a look:

1. Gnome drops support cause "supported by Cockpit already"
2. You ask on kde-hardware-devel about dropping too. One persons says yes, another no: 2:1 - in my opinion this isn't "we decided"!
3. you drop support cause of "gnome do so & not used on desktop anyway"
4. 9 people says, that you brick their setups! 9 people says, that she use it on the desktop!

Your argument "not used on desktop anyway" is invalid, should we use cockpit in future now, because gnome said so? I'm confused. Gnome is known for reducing functionality with every release, KDE not. But not plasma-nm, you decided to follow gnome way. I added patch from https://forums.gentoo.org/viewtopic-t-1066054.html to bring back functionality, so you have no work to bring back functionality! Please, don't ignore userbase anymore.
Comment 18 Bob Wya 2017-07-25 10:10:45 UTC
(In reply to Jack Prom from comment #16)
> Created attachment 106846 [details]
> bring back functionality

Thanks for this...
But yet another User patch to (potentially) re-base with every kde-plasma release. Sad times... :-(
Comment 19 Meconio 2017-07-25 12:06:50 UTC
Thanks Jack for your support. I agree with what you have said I would just add that they are not only 9 people to whom this arbitrary decision has created problems. I'm talking about the technical department of our company, we always preferred an open source approach because the official distro of our assurance department is kubuntu 16.04 while we at the tech department were excited about kde neon we have a medium sized network and for many years ( 5-6) we never had a problem (working with vlans, bridges and sometimes bonding). We have some management tools (Voip etc ...) that require a distro upgrade to work properly but until this feature would be restored for us it is counterproductive to upgrade. If we do not recover shortly, we will be forced to change distro or switch to proprietary systems :(
Comment 20 Jan Grulich 2017-07-27 11:22:43 UTC
Hi,

I'm aware that some of you may be unhappy with the change we did and sorry for not responding earlier, I had some personal stuff to do. Back to the problem, I'll try to bring this back to discussion and we will see if we are going to revert the removed support back or not. We removed it because for 99% of users this is useless and may just confuse/scare people who know nothing about those certain connections, also they kinda mess with the UI (e.g. when you use virtualbox you will end up with automatically created virbr0 connection taking place in the applet). 

Stay tuned. Thanks.
Comment 21 Meconio 2017-07-27 11:40:20 UTC
Then I suggest a package to install separately for adding all of this functions
Comment 22 Stefan Schmid 2017-07-27 11:43:10 UTC
(In reply to Jan Grulich from comment #20)
> We removed it because for 99% of users this is useless and may just 
> confuse/scare people who know nothing about those certain connections.

But this is no reason to completely remove the code. You can hide the creation of such Connections behind an "Expert-Mode". In this way Plasma-NM could still display existing connections without confusing the user.
Comment 23 Jan Grulich 2017-07-27 11:50:30 UTC
(In reply to Stefan Schmid from comment #22)
> (In reply to Jan Grulich from comment #20)
> > We removed it because for 99% of users this is useless and may just 
> > confuse/scare people who know nothing about those certain connections.
> 
> But this is no reason to completely remove the code. You can hide the
> creation of such Connections behind an "Expert-Mode". In this way Plasma-NM
> could still display existing connections without confusing the user.

The code is still there, those connections are just filtered and not shown in the main UI.
Comment 24 Meconio 2017-07-27 11:57:53 UTC
Yes but the user now is unable to use advanced network features talked above
Comment 25 Jack Prom 2017-07-27 12:08:36 UTC
(In reply to Jan Grulich from comment #20)
> We removed it because for 99% of users this is useless 
99% based on which statistic? ;)

> may just confuse/scare people who know
> nothing about those certain connections
This is the typical Gnome argument to remove functionality from release to release. On the contrary KDE and we love it. To going the gnome way is inconsistent and the resulting problems you see now in this bug report. For us it's broken software ;) Had you ever got bugs caused by confused people? So confused, that they can't work without the broken applet? I doubt that.

> The code is still there, those connections are just filtered and not shown
> in the main UI.

For removing of the filters you need experience in compiling. I think this can confuse users many time more as the possibility to configure bridges or bonding.
Comment 26 Stefan Schmid 2017-07-27 12:19:21 UTC
(In reply to Jan Grulich from comment #23)
> The code is still there, those connections are just filtered and not shown
> in the main UI.
"remove code from upstream" and "filtering" are not the same!
On Gentoo is this no Problem (userpatch to "/etc/portage/patches" and its fine) but on a binary-Distribution is it no so simple.
Comment 27 faunris 2017-07-28 06:14:08 UTC
(In reply to Jan Grulich from comment #20)

> Back to the problem, I'll try to bring this back to discussion and we will see if we are
> going to revert the removed support back or not. 

Please post here a discussion link, if one is created.

Thank you!
Comment 28 buzzurro 2017-08-09 08:43:54 UTC
Any news? Working with nmtui is a nightmare!
Comment 29 Jan Grulich 2017-08-14 05:45:46 UTC
Here is the link to the mailing list where I asked:
https://mail.kde.org/pipermail/kde-hardware-devel/2017-August/003878.html
Comment 30 Jack Prom 2017-08-21 12:16:30 UTC
> Just reverting the patches is going to be
> another big visual change that might annoy someone else who will ask to
> change it again. See the picture?

I don't understand the logic behind this oppinion. The point to remove was another and we miss functionality. I guess, that nobody would come again to let remove functionality because she exists.
Comment 31 faunris 2017-08-21 12:19:37 UTC
(In reply to Jack Prom from comment #30)
> > Just reverting the patches is going to be
> > another big visual change that might annoy someone else who will ask to
> > change it again. See the picture?
> 
> I don't understand the logic behind this oppinion. The point to remove was
> another and we miss functionality. I guess, that nobody would come again to
> let remove functionality because she exists.

Please, reply in mail thread. To see this all.
Comment 32 Jan Grulich 2017-08-31 12:41:53 UTC
Git commit 4634aa6e68e2e4d5a1177a3ee90a6461a9e3f44a by Jan Grulich.
Committed on 31/08/2017 at 12:38.
Pushed by grulich into branch 'master'.

Add option to allow managing virtual connections

If this option is enabled, users will see virtual connections in applet
and in the connection editor and they will be able to create new virtual
connections as well. This option is disabled by default as we don't want
regular users to be bothered by this.

M  +4    -0    applet/contents/config/main.xml
M  +10   -0    applet/contents/ui/configGeneral.qml
M  +1    -0    applet/contents/ui/main.qml
M  +1    -0    libs/CMakeLists.txt
R  +20   -7    libs/configuration.cpp [from: libs/declarative/configuration.cpp - 070% similarity]
R  +6    -5    libs/configuration.h [from: libs/declarative/configuration.h - 077% similarity]
M  +0    -1    libs/declarative/CMakeLists.txt
M  +2    -15   libs/declarative/connectionicon.cpp
M  +2    -20   libs/declarative/networkstatus.cpp
M  +1    -0    libs/editor/CMakeLists.txt
M  +28   -0    libs/models/creatableconnectionsmodel.cpp
M  +14   -7    libs/uiutils.cpp

https://commits.kde.org/plasma-nm/4634aa6e68e2e4d5a1177a3ee90a6461a9e3f44a
Comment 33 Jack Prom 2017-09-03 15:16:20 UTC
I think, I speak for all of us: thank you <3
Comment 34 buzzurro 2017-11-22 13:59:28 UTC
It works perfectly, thanks! Neon latest version OK.
Comment 35 Ben Cooksley 2024-12-23 18:26:03 UTC
Bulk transfer as requested in T17796