Add option to allow managing virtual connections

If this option is enabled, users will see virtual connections in applet
and in the connection editor and they will be able to create new virtual
connections as well. This option is disabled by default as we don't want
regular users to be bothered by this.

BUG:376664